# WiringPi

./: meson.build
wiringPi/: max5322.c  mcp3002.c  mcp3004.c  meson.build  wiringPi.c
wiringPiD/: drcNetCmd.h
